--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ collections:
 
 # Social Profiles
 twitter_username:
-github_username: coelhorzd
+github_username: 
 facebook_username:
 linkedin_username:  coelho-renan
 
